[package]
name = "jexpe-vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zbox = { path = "../zbox", features = ["storage-file", "libsodium-bundled"] }
cuid = "1.2.0"