[package]
name = "jexpe"
version = "0.0.1"
description = "Your one-stop connection software"
authors = ["raccoman <riccardoaccoma@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
#jexpe-vault = { path = "../jexpe-vault" }
# zbox = { git = "https://github.com/jexpe-team/zbox" }
#portable-pty = { path = "../pty" }
portable-pty = { git = "https://github.com/wez/wezterm.git" }
crossbeam-channel = "0.5"
cuid = "1.2.0"

[features]
# by default Tauri runs in production mode
# when `jexpe dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

