[package]
name = "pty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-pty = { git = "https://github.com/wez/wezterm.git", features = ["serde_support"] }
tokio = { version = "1.23.0", features = ["rt", "sync", "time"] }
log = { version = "0.4.17" }